Checking for a Valid Word

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,5 +12,7 @@
 
    {% endblock %}
 </body>
-<script src="../static/scripts/scripts.js"></script>
+{% block scripts %}
+
+{% endblock %}
 </html>
