Step Seven: Refactoring

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,6 +19,7 @@
     <input type="text" id="word-input">
     <button type="submit" id="submit">submit</button>
 </form>
+<p class="message">word already submitted</p>
 <ul>
     
 </ul>
