--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,23 @@
+*{
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+}
+/* body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
 td {
     border: solid red 1px;
     font-size: 3rem;
     text-align: center;
     padding: 10px;
+}
+.message {
+    display: none;
+    position: relative;
+    color: red;
 }
 
